Day 19 Part 2 canceled (code does not finish and uses lots of ram)